# swm-console-term

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.in  requirements.txt  swm-console
src/: swm-console  swm-console.py
swmconsole/: run.py
